--- a/_config.yml
+++ b/_config.yml
@@ -1,47 +1,29 @@
-# Site settings
-title: Peter Kitlas
-
-# Build settings
-markdown: kramdown
-permalink: pretty
-
-favicon: "/assets/img/temp_chem.jpg"
-
-port: 3000
-url: http://localhost:3000
-
-sass:
-  sass_dir: assets/css
-  style: :nested
-
-# Add bibliography
-gems: ['jekyll/scholar']
-
-scholar:
-  style: assets/bib/_ieee-with-url.csl
-  locale: en
-
-  sort_by: none
-  order: ascending
-
-  group_by: none
-  group_order: ascending
-
-  source: assets/bib
-  bibliography: _mybib.bib
-  bibliography_template: "{{reference}}"
-
-  replace_strings: true
-  join_strings:    true
-
-  use_raw_bibtex_entry: false
-  bibtex_filters:
-  - superscript
-  - latex
-  - HTML
-
-  details_dir:    bibliography
-  details_layout: bibtex.html
-  details_link:   Details
-
-  query: "@*"
+<!DOCTYPE html>
+	<html>
+		<head>
+			<title>{{ page.title }}</title>
+			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/main.css">
+		</head>
+		<body>
+			<nav>
+	    		<ul>
+	        		<li><a href="/">Home</a></li>
+		        	<li><a href="/research">Research</a></li>
+	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/blog">Blog</a></li>
+	    		</ul>
+			</nav>
+			<div class="container">
+			
+			{{ content }}
+			
+			</div><!-- /.container -->
+			<footer>
+	    		<ul>
+	        		<li><a href="mailto:pkitlas@me.com">email</a></li>
+	        		<li><a href="https://pkitlas.github.io">website</a></li>
+				</ul>
+			</footer>
+		</body>
+	</html>
